Created a completely functional Express, Node and MongoDB stack in a container.

--- a/express-server/package.json
+++ b/express-server/package.json
@@ -18,7 +18,9 @@
   "author": "Anzar Ahmad Malik",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
